; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-vect-generic.c_expand_vector_parallel.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-vect-generic.c_expand_vector_parallel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i32, i32)* }

@UNITS_PER_WORD = common dso_local global i32 0, align 4
@word_mode = common dso_local global i64 0, align 8
@MODE_INT = common dso_local global i32 0, align 4
@lang_hooks = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@NULL_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32 (i32*, i32, i32, i32, i32, i32, i32)*, i32, i32, i32, i32)* @expand_vector_parallel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @expand_vector_parallel(i32* %0, i32 (i32*, i32, i32, i32, i32, i32, i32)* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32 (i32*, i32, i32, i32, i32, i32, i32)*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 (i32*, i32, i32, i32, i32, i32, i32)* %1, i32 (i32*, i32, i32, i32, i32, i32, i32)** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %19 = load i32, i32* %10, align 4
  %20 = call i32 @TYPE_SIZE_UNIT(i32 %19)
  %21 = call i32 @tree_low_cst(i32 %20, i32 1)
  %22 = load i32, i32* @UNITS_PER_WORD, align 4
  %23 = sdiv i32 %21, %22
  store i32 %23, i32* %17, align 4
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @TREE_TYPE(i32 %24)
  %26 = call i64 @TYPE_MODE(i32 %25)
  %27 = load i64, i64* @word_mode, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %6
  %30 = load i32*, i32** %8, align 8
  %31 = load i32 (i32*, i32, i32, i32, i32, i32, i32)*, i32 (i32*, i32, i32, i32, i32, i32, i32)** %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @TREE_TYPE(i32 %33)
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* %13, align 4
  %38 = call i32 @expand_vector_piecewise(i32* %30, i32 (i32*, i32, i32, i32, i32, i32, i32)* %31, i32 %32, i32 %34, i32 %35, i32 %36, i32 %37)
  store i32 %38, i32* %7, align 4
  br label %79

39:                                               ; preds = %6
  %40 = load i32, i32* %17, align 4
  %41 = icmp sgt i32 %40, 1
  br i1 %41, label %42, label %58

42:                                               ; preds = %39
  %43 = load i32, i32* %17, align 4
  %44 = call i32 @build_word_mode_vector_type(i32 %43)
  store i32 %44, i32* %18, align 4
  %45 = load i32*, i32** %8, align 8
  %46 = load i32 (i32*, i32, i32, i32, i32, i32, i32)*, i32 (i32*, i32, i32, i32, i32, i32, i32)** %9, align 8
  %47 = load i32, i32* %18, align 4
  %48 = load i32, i32* %18, align 4
  %49 = call i32 @TREE_TYPE(i32 %48)
  %50 = load i32, i32* %11, align 4
  %51 = load i32, i32* %12, align 4
  %52 = load i32, i32* %13, align 4
  %53 = call i32 @expand_vector_piecewise(i32* %45, i32 (i32*, i32, i32, i32, i32, i32, i32)* %46, i32 %47, i32 %49, i32 %50, i32 %51, i32 %52)
  store i32 %53, i32* %14, align 4
  %54 = load i32*, i32** %8, align 8
  %55 = load i32, i32* %18, align 4
  %56 = load i32, i32* %14, align 4
  %57 = call i32 @gimplify_val(i32* %54, i32 %55, i32 %56)
  store i32 %57, i32* %14, align 4
  br label %76

58:                                               ; preds = %39
  %59 = load i32, i32* %10, align 4
  %60 = call i32 @TYPE_SIZE(i32 %59)
  %61 = call i32 @tree_low_cst(i32 %60, i32 1)
  %62 = load i32, i32* @MODE_INT, align 4
  %63 = call i32 @mode_for_size(i32 %61, i32 %62, i32 0)
  store i32 %63, i32* %16, align 4
  %64 = load i32 (i32, i32)*, i32 (i32, i32)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @lang_hooks, i32 0, i32 0, i32 0), align 8
  %65 = load i32, i32* %16, align 4
  %66 = call i32 %64(i32 %65, i32 1)
  store i32 %66, i32* %15, align 4
  %67 = load i32 (i32*, i32, i32, i32, i32, i32, i32)*, i32 (i32*, i32, i32, i32, i32, i32, i32)** %9, align 8
  %68 = load i32*, i32** %8, align 8
  %69 = load i32, i32* %15, align 4
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %12, align 4
  %72 = load i32, i32* @NULL_TREE, align 4
  %73 = load i32, i32* @NULL_TREE, align 4
  %74 = load i32, i32* %13, align 4
  %75 = call i32 %67(i32* %68, i32 %69, i32 %70, i32 %71, i32 %72, i32 %73, i32 %74)
  store i32 %75, i32* %14, align 4
  br label %76

76:                                               ; preds = %58, %42
  br label %77

77:                                               ; preds = %76
  %78 = load i32, i32* %14, align 4
  store i32 %78, i32* %7, align 4
  br label %79

79:                                               ; preds = %77, %29
  %80 = load i32, i32* %7, align 4
  ret i32 %80
}

declare dso_local i32 @tree_low_cst(i32, i32) #1

declare dso_local i32 @TYPE_SIZE_UNIT(i32) #1

declare dso_local i64 @TYPE_MODE(i32) #1

declare dso_local i32 @TREE_TYPE(i32) #1

declare dso_local i32 @expand_vector_piecewise(i32*, i32 (i32*, i32, i32, i32, i32, i32, i32)*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @build_word_mode_vector_type(i32) #1

declare dso_local i32 @gimplify_val(i32*, i32, i32) #1

declare dso_local i32 @mode_for_size(i32, i32, i32) #1

declare dso_local i32 @TYPE_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
